--- a/src/main/resources/templates/search_result.html
+++ b/src/main/resources/templates/search_result.html
@@ -4,6 +4,6 @@
     <title>Search fields</title> 
     <head>
 <body>
-    <h1 th:text="${name}"></h1>
+    <h1 th:text="'Search result for ' + ${name} + ' are below:'"></h1>
 </body>
 </html>
